--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
 plugins {
-    java
-    id("org.springframework.boot") version "3.1.2"
-    id("io.spring.dependency-management") version "1.1.2"
+    id 'java'
+    id 'org.springframework.boot' version "2.7.15"
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+
 }
 
 group = "com.wanted"
 version = "0.0.1-SNAPSHOT"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = '11'
 }
 
 configurations {
     compileOnly {
-        extendsFrom(configurations.annotationProcessor.get())
+        extendsFrom annotationProcessor
     }
 }
 
@@ -30,6 +31,4 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
 
-tasks.withType<Test> {
-    useJUnitPlatform()
-}
+
